Preserve slab allocations during SQL preparation; add more fuzz
Signed-off-by: Ken Shackleton <kshackleton1@bloomberg.net>